--- a/verification.html
+++ b/verification.html
@@ -129,7 +129,9 @@ let missed = 0;
 let maxMissed = 3;
 
 let gameActive = true;
-let spawnSpeed = 450; // plus rapide dès le début
+
+let spawnDelay = 450;   // temps avant apparition suivante
+let lifetime = 1000;    // durée de vie d'une verte
 
 let spawnCount = 0;
 
@@ -137,14 +139,15 @@ function spawnOrb() {
 
     if (!gameActive) return;
 
+    spawnCount++;
+
     let orb = document.createElement("div");
     orb.classList.add("orb");
 
-    spawnCount++;
-
-    // Rouge toutes les 4 à 6 apparitions environ
+    // Rouge remplace parfois une verte
     let isRed = false;
-    if (spawnCount % (4 + Math.floor(Math.random() * 3)) === 0) {
+
+    if (spawnCount > 3 && spawnCount % (4 + Math.floor(Math.random() * 3)) === 0) {
         isRed = true;
     }
 
@@ -154,24 +157,22 @@ function spawnOrb() {
         orb.classList.add("green");
     }
 
-    orb.style.top = Math.random() * (window.innerHeight - 100) + "px";
-    orb.style.left = Math.random() * (window.innerWidth - 100) + "px";
+    orb.style.top = Math.random() * (window.innerHeight - 120) + "px";
+    orb.style.left = Math.random() * (window.innerWidth - 120) + "px";
 
-    // Les vertes disparaissent de plus en plus vite
-    let lifetime;
+    document.body.appendChild(orb);
 
-    if (isRed) {
-        lifetime = 900;
-    } else {
-        lifetime = 1100 - (score * 30);
-        if (lifetime < 400) lifetime = 400;
-    }
+    let currentLifetime = isRed ? 800 : lifetime;
+
+    let clicked = false;
 
     orb.onclick = function() {
 
         if (!gameActive) return;
 
-        if (orb.classList.contains("red")) {
+        clicked = true;
+
+        if (isRed) {
             alert("Interférence détectée. Synchronisation rompue.");
             window.location.href = "connexion.html";
             return;
@@ -188,16 +189,19 @@ function spawnOrb() {
         if (score >= requiredScore) {
             gameActive = false;
             startMemoryPhase();
+            return;
         }
-    };
 
-    document.body.appendChild(orb);
+        accelerateGame();
+
+        setTimeout(spawnOrb, spawnDelay);
+    };
 
     setTimeout(() => {
 
-        if (document.body.contains(orb)) {
+        if (!clicked && gameActive) {
 
-            if (orb.classList.contains("green")) {
+            if (!isRed) {
                 missed++;
 
                 if (missed >= maxMissed) {
@@ -208,18 +212,26 @@ function spawnOrb() {
             }
 
             orb.remove();
+
+            accelerateGame();
+
+            setTimeout(spawnOrb, spawnDelay);
         }
 
-    }, lifetime);
+    }, currentLifetime);
+}
 
-    // Accélération plus agressive
-    spawnSpeed -= 20;
-    if (spawnSpeed < 220) spawnSpeed = 220;
+function accelerateGame() {
 
-    setTimeout(spawnOrb, spawnSpeed);
+    spawnDelay -= 15;
+    lifetime -= 20;
+
+    if (spawnDelay < 220) spawnDelay = 220;
+    if (lifetime < 350) lifetime = 350;
 }
 
 spawnOrb();
+
 
 
 /* ================= PHASE MEMOIRE ================= */
