--- a/verification.html
+++ b/verification.html
@@ -130,8 +130,8 @@ let maxMissed = 3;
 
 let gameActive = true;
 
-let spawnDelay = 450;   // temps avant apparition suivante
-let lifetime = 1000;    // durée de vie d'une verte
+let spawnDelay = 450;
+let lifetime = 1000;
 
 let spawnCount = 0;
 
@@ -144,7 +144,6 @@ function spawnOrb() {
     let orb = document.createElement("div");
     orb.classList.add("orb");
 
-    // Rouge remplace parfois une verte
     let isRed = false;
 
     if (spawnCount > 3 && spawnCount % (4 + Math.floor(Math.random() * 3)) === 0) {
@@ -164,13 +163,37 @@ function spawnOrb() {
 
     let currentLifetime = isRed ? 800 : lifetime;
 
-    let clicked = false;
+    // On stocke le timeout pour pouvoir l'annuler
+    let removeTimeout = setTimeout(() => {
+
+        if (!gameActive) return;
+
+        if (!isRed) {
+            missed++;
+
+            if (missed >= maxMissed) {
+                alert("Flux instable. Synchronisation échouée.");
+                window.location.href = "connexion.html";
+                return;
+            }
+        }
+
+        if (document.body.contains(orb)) {
+            orb.remove();
+        }
+
+        accelerateGame();
+        setTimeout(spawnOrb, spawnDelay);
+
+    }, currentLifetime);
+
 
     orb.onclick = function() {
 
         if (!gameActive) return;
 
-        clicked = true;
+        // On annule le timeout pour éviter le bug
+        clearTimeout(removeTimeout);
 
         if (isRed) {
             alert("Interférence détectée. Synchronisation rompue.");
@@ -193,32 +216,8 @@ function spawnOrb() {
         }
 
         accelerateGame();
-
         setTimeout(spawnOrb, spawnDelay);
     };
-
-    setTimeout(() => {
-
-        if (!clicked && gameActive) {
-
-            if (!isRed) {
-                missed++;
-
-                if (missed >= maxMissed) {
-                    alert("Flux instable. Synchronisation échouée.");
-                    window.location.href = "connexion.html";
-                    return;
-                }
-            }
-
-            orb.remove();
-
-            accelerateGame();
-
-            setTimeout(spawnOrb, spawnDelay);
-        }
-
-    }, currentLifetime);
 }
 
 function accelerateGame() {
@@ -231,6 +230,7 @@ function accelerateGame() {
 }
 
 spawnOrb();
+
 
 
 
