--- a/archives.html
+++ b/archives.html
@@ -20,7 +20,7 @@
 
 <div class="database-container">
 
-    <div class="dossier-card" onclick="window.location.href="verification-jumeaux.html">
+    <div class="dossier-card" onclick="window.location.href='verification-jumeaux.html'">
         <div class="badge">Confidentiel</div>
         <div class="dossier-title">Dossier 07 – Projet Jumeaux</div>
         <div class="dossier-desc">
