--- a/verification-jumeaux.html
+++ b/verification-jumeaux.html
@@ -160,7 +160,7 @@ function gameOver() {
 function victory() {
     clearInterval(gameInterval);
     alert("Validation confirmée.");
-    window.location.href = "projet-jumeaux.html";
+    window.location.href = "jumeaux.html";
 }
 
 document.addEventListener("keydown", e => {
