--- a/archives.html
+++ b/archives.html
@@ -20,22 +20,7 @@
 
 <div class="database-container">
 
-    <div class="dossier-card" onclick="window.location.href='verification-jumeaux.html'">
-        <div class="badge">Confidentiel</div>
-        <div class="dossier-title">Dossier 07 – Projet Jumeaux</div>
-        <div class="dossier-desc">
-            Synchronisation altérique croisée – Données expérimentales sensibles.
-        </div>
-    </div>
-
-    <div class="dossier-card" onclick="window.location.href='boitemail.html'">
-        <div class="badge">Interne</div>
-        <div class="dossier-title">Messagerie interne</div>
-        <div class="dossier-desc">
-            Communications administratives et rapports confidentiels.
-        </div>
-    </div>
-
+    <!-- 1️⃣ DOSSIER 09 – EXPÉRIENCES RATÉES -->
     <div class="dossier-card" onclick="window.location.href='experience-ratee.html'">
         <div class="badge">Restreint</div>
         <div class="dossier-title">Dossier 09 – Expériences échouées</div>
@@ -44,7 +29,26 @@
         </div>
     </div>
 
+    <!-- 2️⃣ MESSAGERIE INTERNE -->
+    <div class="dossier-card" onclick="window.location.href='boitemail.html'">
+        <div class="badge">Interne</div>
+        <div class="dossier-title">Messagerie interne</div>
+        <div class="dossier-desc">
+            Communications administratives et rapports confidentiels.
+        </div>
+    </div>
+
+    <!-- 3️⃣ PROJET JUMEAUX -->
+    <div class="dossier-card" onclick="window.location.href='verification-jumeaux.html'">
+        <div class="badge">Confidentiel</div>
+        <div class="dossier-title">Dossier 07 – Projet Jumeaux</div>
+        <div class="dossier-desc">
+            Synchronisation altérique croisée – Données expérimentales sensibles.
+        </div>
+    </div>
+
 </div>
+
 
 <div class="database-footer">
     Système Orphelinat Hikari no Mori – Version 3.2.17
