--- a/index.html
+++ b/index.html
@@ -75,32 +75,32 @@
 
     <div class="news-grid">
 
-        <div class="news-card">
-            <h3>Modernisation des structures éducatives</h3>
-            <p>
-                Un plan municipal prévoit la mise à jour des protocoles
-                d’encadrement et de sécurité dans les établissements
-                accueillant des mineurs.
-            </p>
-        </div>
+        <div class="news-card" onclick="window.location.href='actualite-education.html'">
+    <h3>Modernisation des structures éducatives</h3>
+    <p>
+        Un plan municipal prévoit la mise à jour des protocoles
+        d’encadrement et de sécurité dans les établissements
+        accueillant des mineurs.
+    </p>
+</div>
 
-        <div class="news-card">
-            <h3>Extension du réseau de surveillance</h3>
-            <p>
-                Installation de nouveaux dispositifs de sécurité
-                dans les zones périphériques afin de renforcer
-                la protection des infrastructures sensibles.
-            </p>
-        </div>
+<div class="news-card" onclick="window.location.href='actualite-surveillance.html'">
+    <h3>Extension du réseau de surveillance</h3>
+    <p>
+        Installation de nouveaux dispositifs de sécurité
+        dans les zones périphériques afin de renforcer
+        la protection des infrastructures sensibles.
+    </p>
+</div>
 
-        <div class="news-card">
-            <h3>Forum sur l’encadrement institutionnel</h3>
-            <p>
-                Conférence dédiée aux structures spécialisées
-                et à la gestion administrative des établissements
-                à régime particulier.
-            </p>
-        </div>
+<div class="news-card" onclick="window.location.href='actualite-forum.html'">
+    <h3>Forum sur l’encadrement institutionnel</h3>
+    <p>
+        Conférence dédiée aux structures spécialisées
+        et à la gestion administrative des établissements
+        à régime particulier.
+    </p>
+</div>
 
     </div>
 </section>
