--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <nav>
     <a href="index.html" class="active">Accueil</a>
-    <a href="#">Culture</a>
-    <a href="#">Éducation</a>
+    <a href="culture.html">Culture</a>
+    <a href="education.html">Éducation</a>
     <a href="institutions.html">Institutions</a>
 </nav>
 
