--- a/culture.html
+++ b/culture.html
@@ -19,12 +19,14 @@
     <a href="institutions.html">Institutions</a>
 </nav>
 
-<section class="section band-light article">
+<section class="section band-light">
+
+    <h2>Identité culturelle</h2>
 
     <p>
-        Kumamoto possède un héritage culturel riche, marqué par
-        son architecture traditionnelle, ses festivals saisonniers
-        et ses arts régionaux transmis de génération en génération.
+        Kumamoto possède un héritage culturel riche, marqué par son
+        architecture traditionnelle, ses festivals saisonniers et ses
+        arts régionaux transmis de génération en génération.
     </p>
 
     <p>
@@ -32,21 +34,25 @@
         symbolisant la résilience et la stabilité institutionnelle.
     </p>
 
+</section>
+
+<section class="section band-dark">
+
+    <h2>Événements annuels</h2>
+
     <p>
-        De nombreux événements culturels sont organisés tout au long
-        de l’année, favorisant le lien social et le développement
-        harmonieux des jeunes générations.
+        Des festivals saisonniers, marchés nocturnes et cérémonies
+        traditionnelles rythment la vie locale tout au long de l’année.
     </p>
 
     <p>
-        La municipalité veille à préserver l’identité historique
-        tout en intégrant des technologies modernes adaptées aux
-        besoins actuels.
+        Ces événements participent à la cohésion sociale et au
+        développement harmonieux des jeunes générations.
     </p>
 
 </section>
 
-<section class="section band-dark">
+<section class="section band-light">
 
     <h2>Centres culturels municipaux</h2>
 
