--- a/education.html
+++ b/education.html
@@ -19,7 +19,9 @@
     <a href="institutions.html">Institutions</a>
 </nav>
 
-<section class="section band-light article">
+<section class="section band-light">
+
+    <h2>Organisation académique</h2>
 
     <p>
         Le système éducatif de Kumamoto repose sur une structure
@@ -32,32 +34,31 @@
         supervision pédagogique et administrative.
     </p>
 
-    <p>
-        Un département spécialisé assure le suivi des structures
-        à régime particulier nécessitant un encadrement renforcé.
-    </p>
-
-    <p>
-        L’objectif municipal est d’assurer un environnement
-        d’apprentissage stable, structuré et conforme aux
-        réglementations régionales.
-    </p>
-
 </section>
 
 <section class="section band-dark">
 
-    <h2>Supervision & Encadrement</h2>
+    <h2>Encadrement spécialisé</h2>
 
     <p>
-        Les inspections régulières garantissent le respect
-        des procédures internes et des standards éducatifs.
+        Un département municipal dédié assure le suivi des structures
+        nécessitant un encadrement renforcé.
     </p>
 
     <p>
-        La coordination entre institutions publiques et
-        structures privées contribue au maintien d’un
-        environnement éducatif sécurisé.
+        La coordination entre institutions publiques et structures privées
+        contribue au maintien d’un environnement éducatif sécurisé.
+    </p>
+
+</section>
+
+<section class="section band-light">
+
+    <h2>Inspection & conformité</h2>
+
+    <p>
+        Des inspections régulières garantissent le respect des procédures
+        internes et des standards éducatifs régionaux.
     </p>
 
 </section>
