--- a/institutions.html
+++ b/institutions.html
@@ -29,6 +29,7 @@
             <img src="images/lycee.jpg" alt="Lycée Municipal Central">
             <h3>Lycée Municipal Central</h3>
             <p>Établissement public d’enseignement secondaire reconnu pour son excellence académique.</p>
+            <a href="lycee.html" class="btn-primary">En savoir plus</a>
         </div>
 
         <!-- Centre culturel -->
@@ -36,6 +37,7 @@
             <img src="images/centre.jpg" alt="Centre Culturel Shinrin">
             <h3>Centre Culturel Shinrin</h3>
             <p>Structure municipale dédiée aux arts traditionnels et à la transmission culturelle.</p>
+            <a href="centre-shinrin.html" class="btn-primary">En savoir plus</a>
         </div>
 
         <!-- Orphelinat -->
