--- a/culture.html
+++ b/culture.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="subpage">
 
 <header class="hero-small">
     <h1>Culture & Patrimoine</h1>
