--- a/lycee.html
+++ b/lycee.html
@@ -8,9 +8,12 @@
 
 <body>
 
-<header class="hero-small">
-    <h1>Lycée municipal central</h1>
+<header class="hero-banner lycee-hero">
+    <div class="hero-overlay">
+        <h1>Lycée municipal central</h1>
+    </div>
 </header>
+
 
 <nav>
     <a href="index.html">Accueil</a>
