--- a/centre-shinrin.html
+++ b/centre-shinrin.html
@@ -8,9 +8,12 @@
 
 <body>
 
-<header class="hero-small">
-    <h1>Centre culturel Shinrin</h1>
+<header class="hero-banner shinrin-hero">
+    <div class="hero-overlay">
+        <h1>Centre culturel Shinrin</h1>
+    </div>
 </header>
+
 
 <nav>
     <a href="index.html">Accueil</a>
